--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1061,7 +1061,7 @@
   height: calc(100vh * 2.2);
 }
 .sc-creator .creator-img img {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
 }
