프로젝트 최종수정

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,12 +1,16 @@
 @import './reset.css';
 @import './common.css';
 
+#wrap{
+  min-width: 1440px;
+}
 /* header */
 #header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  min-width: 1440px;
   color: #fff;
   z-index: 100;
   transform: translateY(-100%);
